# platform-mcp

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  main.py  mcp-bridge.py  pyproject.toml
